# SDK

./: README.md  pyproject.toml
standards/: __init__.py  main.py
standards/databases/: __init__.py  mssql.py  redis.py
standards/exceptions/: __init__.py  base.py  geo.py  instancing.py
standards/rabbitmq/: __init__.py  queue.py
standards/rabbitmq/pools/: queue_pool.py
standards/structures/: __init__.py  alerts.py  anchor.py  auth.py  base.py  config.py  equipament.py  equipment.py  event.py  generics.py  position.py  risk_area.py  trackable.py  user.py  vehicle.py
standards/structures/exceptions/: config.py
standards/utils/: __init__.py  castings.py  geo.py  references.py  singleton.py
