[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "standards"
version = "1.0.0rc5"
authors = [
  { name="IM9 Digital", email="joao_bernardi@outlook.com" },
]
description = "Structure standards across projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ['pika', 'pydantic', 'pyodbc', 'requests', 'redis', 'shapely']
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]